feat(home, signin, signup): implement signin and signup modals from home page
Implemented basic signin and signup functionality from home page with storage of firebase user
information in local storage

--- a/jobpath-app/src/app/components/home/home.component.html
+++ b/jobpath-app/src/app/components/home/home.component.html
@@ -2,6 +2,6 @@
   <h1>JobPath</h1>
   <p>We know job hunting can be overwhelming.<br>Let's help you stay organized!</p>
   <img src="../../../assets/home.png" alt="Home Logo">
-  <button mat-raised-button color="primary" routerLink="/login">Let's Go</button>
-  <button id="sign-up" mat-raised-button routerLink="/signup">Sign Up</button>
+  <button mat-raised-button color="primary" (click)="login()">Let's Go</button>
+  <button id="sign-up" mat-raised-button (click)="signup()">Sign Up</button>
 </section>
