style(signin-dialog, signup-dialog): change minor styling properties

--- a/jobpath-app/src/app/components/signin-dialog/signin-dialog.component.html
+++ b/jobpath-app/src/app/components/signin-dialog/signin-dialog.component.html
@@ -2,11 +2,11 @@
   <h1>Log In</h1>
   <mat-form-field>
     <mat-label>Email Address</mat-label>
-    <input mat-input type="text" cdkFocusInitial placeholder="email address" [(ngModel)]="data.email">
+    <input matInput type="text" cdkFocusInitial [(ngModel)]="data.email">
   </mat-form-field>
   <mat-form-field>
     <mat-label>Password</mat-label>
-    <input mat-input type="password" cdkFocusInitial placeholder="password" [(ngModel)]="data.password">
+    <input matInput type="password" cdkFocusInitial [(ngModel)]="data.password">
   </mat-form-field>
   
   <div mat-dialog-actions>
