logo styling and started on dashboard

--- a/jobpath-app/src/app/app.component.html
+++ b/jobpath-app/src/app/app.component.html
@@ -1,12 +1,20 @@
 <mat-toolbar color="primary">
-  <h2>JobPath</h2>
+  <!-- <h2>JobPath</h2> -->
+  <a href="/">
+    <img
+      src="../../../assets/JobPathNew/whiteletters.png"
+      alt="Logo"
+      class="logo"
+    />
+  </a>
+
   <nav>
     <ul>
       <li>
-        <h3 routerLink="/about">About</h3>
+        <h3 class="tab" routerLink="/about">About</h3>
       </li>
       <li>
-        <h3 routerLink="/login">Log In</h3>
+        <h3 class="tab" routerLink="/login">Log In</h3>
       </li>
     </ul>
   </nav>
