--- a/jobpath-app/src/app/components/home/home.component.html
+++ b/jobpath-app/src/app/components/home/home.component.html
@@ -1,7 +1,12 @@
 <section>
-  <h1>JobPath</h1>
-  <p>We know job hunting can be overwhelming.<br>Let's help you stay organized!</p>
-  <img src="../../../assets/home.png" alt="Home Logo">
+  <!-- <h1>JobPath</h1> -->
+  <img src="../../../assets/JobPathNew/resizedLogo.svg" alt="Logo" class="logo" />
+  
+  <p id="desc">
+    We know job hunting can be overwhelming.<br />Let's help you stay organized!
+  </p>
+  <img src="../../../assets/home.png" alt="Home Logo" />
+  <!-- <img src="../../../assets/home.png" alt="Home Logo" class ="animatedImg"/> -->
   <button mat-raised-button color="primary" (click)="login()">Let's Go</button>
   <button id="sign-up" mat-raised-button (click)="signup()">Sign Up</button>
 </section>
