--- a/jobpath-app/src/app/app.component.css
+++ b/jobpath-app/src/app/app.component.css
@@ -1,7 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap');
+
 mat-toolbar {
   display: flex;
   justify-content: space-between;
   padding: 2vh 2vw;
+}
+
+.tab {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+
 }
 
 ul {
@@ -11,4 +19,9 @@ ul {
 
 li {
   margin: 1vh 1vw;
+}
+
+.logo {
+  margin-top: .5em;
+  height: 4em
 }
