--- a/jobpath-app/src/app/components/signin-dialog/signin-dialog.component.css
+++ b/jobpath-app/src/app/components/signin-dialog/signin-dialog.component.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap');
+
+
 #container {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  font-family: 'Montserrat',sans-serif;
+  max-width: 15em;
 }
 
 mat-label {
