--- a/jobpath-app/src/app/components/dashboard/dashboard.component.html
+++ b/jobpath-app/src/app/components/dashboard/dashboard.component.html
@@ -1,26 +1,52 @@
-<p>dashboard works!</p>
-<div cdkDropListGroup>
-  <div class="example-container">
-    <h2>To do</h2>
-
+<div cdkDropListGroup class = "wrapper">
+  <div class="container">
+    <h2>Applications</h2>
     <div
       cdkDropList
-      [cdkDropListData]="todo"
+      [cdkDropListData]="applications"
       class="example-list"
       (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item}}</div>
+      <div class="example-box" *ngFor="let item of applications" cdkDrag>
+        <p>{{item.companyName}}</p>
+        <p>{{item.position}}</p>
+        <p>{{item.method}}</p>
+        <p>{{item.status}}</p>
+        <p>{{item.date.toLocaleDateString("en-US")}}</p>
+      </div>
     </div>
   </div>
 
-  <div class="example-container">
-    <h2>Done</h2>
-
+   <div class="container">
+    <h2>In Progress</h2>
     <div
       cdkDropList
-      [cdkDropListData]="done"
+      [cdkDropListData]="inProgress"
       class="example-list"
       (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of done" cdkDrag>{{item}}</div>
+      <div class="example-box" *ngFor="let item of inProgress" cdkDrag>
+        <p>{{item.companyName}}</p>
+        <p>{{item.date.toLocaleDateString("en-US")}}</p>
+        <p>{{item.status}}</p>
+        <p>{{item.type}}</p>
+        <p>{{item.feedback}}</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <h2>Offers</h2>
+    <div
+      cdkDropList
+      [cdkDropListData]="offers"
+      class="example-list"
+      (cdkDropListDropped)="drop($event)">
+      <div class="example-box" *ngFor="let item of offers" cdkDrag>
+        <p>{{item.companyName}}</p>
+        <p>{{item.date.toLocaleDateString("en-US")}}</p>
+        <p>{{item.status}}</p>
+        <p>${{(item.salary).toLocaleString()}}</p>
+        <p>{{item.benefits}}</p>
+      </div>
     </div>
   </div>
 </div>
