--- a/jobpath-app/src/app/components/home/home.component.html
+++ b/jobpath-app/src/app/components/home/home.component.html
@@ -9,4 +9,9 @@
   <!-- <img src="../../../assets/home.png" alt="Home Logo" class ="animatedImg"/> -->
   <button mat-raised-button color="primary" (click)="login()">Let's Go</button>
   <button id="sign-up" mat-raised-button (click)="signup()">Sign Up</button>
+  <a routerLink="/dashboard" routerLinkActive="active">
+    <button > Go to dashboard</button>
+  </a>
 </section>
+
+<!-- <router-outlet></router-outlet> -->
