--- a/jobpath-app/src/app/components/dashboard/dashboard.component.css
+++ b/jobpath-app/src/app/components/dashboard/dashboard.component.css
@@ -1,53 +1,69 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap');
 
-* {
-  font-family: 'Montserrat',
-    sans-serif;
 
+* {
+  font-family: 'Montserrat', sans-serif;
 }
 
 .container {
-  width: 400px;
-  max-width: 90%;
-  /* margin: 0 25px 25px 0; */
-  margin: 2rem;
+  min-width: 230px;
+  max-width: 350px;
+  margin: 3rem;
   display: inline-block;
   flex: 1;
   vertical-align: top;
+
 }
 
 .wrapper {
-  margin: 2rem;
-  width: 90%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  margin-top: 2rem;
+  margin: auto;
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
 }
+
 h2 {
-  text-align: center;
+  margin-left: 60px;
+  color: #587CFF;
+  font-weight: 600;
+}
+
+.title {
+  color: #587CFF;
+  font-weight: 500;
+  margin: 0;
+  padding: 0;
 }
 
 .example-list {
-  border: solid 1px #ccc;
+  border: solid 2px rgb(235, 235, 235);
+  /* box-shadow: 3px 5px 5px -3px rgba(0, 0, 0, 0.2),
+              0 5px 5px 1px rgba(0, 0, 0, 0.14),
+              0 3px 5px 2px rgba(0, 0, 0, 0.12); */
   min-height: 60px;
   background: white;
   border-radius: 4px;
   overflow: hidden;
   display: block;
+  max-width: 250px;
+  min-width: 250px;
 }
 
 .example-box {
-  padding: 20px 10px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  align-items: left;
   box-sizing: border-box;
   cursor: move;
   background: white;
   font-size: 14px;
+  padding: 2em;
+  min-width: 250px;
 }
 
 .cdk-drag-preview {
