--- a/jobpath-app/src/app/components/dashboard/dashboard.component.css
+++ b/jobpath-app/src/app/components/dashboard/dashboard.component.css
@@ -1,8 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap");
 
+#add-button {
+  margin: 10px 10px;
+  float: right;
+}
 
 * {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .container {
@@ -12,7 +16,6 @@
   display: inline-block;
   flex: 1;
   vertical-align: top;
-
 }
 
 .wrapper {
@@ -27,12 +30,12 @@
 
 h2 {
   margin-left: 60px;
-  color: #587CFF;
+  color: #587cff;
   font-weight: 600;
 }
 
 .title {
-  color: #587CFF;
+  color: #587cff;
   font-weight: 500;
   margin: 0;
   padding: 0;
@@ -70,8 +73,7 @@ h2 {
   box-sizing: border-box;
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0 8px 10px 1px rgba(0, 0, 0, 0.14),
-    0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
