--- a/jobpath-app/src/app/components/dashboard/dashboard.component.html
+++ b/jobpath-app/src/app/components/dashboard/dashboard.component.html
@@ -1,74 +1,65 @@
-<div cdkDropListGroup class = "wrapper">
-  <div class="container">
-
-
-
-    <h2>Applications</h2>
-    <div
-      cdkDropList
-      [cdkDropListData]="applications"
-      class="example-list"
-      (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of applications" cdkDrag>
-        <h3 class="title">Company name</h3>
-        <p>{{item.companyName}}</p>
-        <h3 class="title">Date applied</h3>
-        <p>{{item.date.toLocaleDateString("en-US")}}</p>
-        <h3 class="title">Position</h3>
-        <p>{{item.position}}</p>
-        <h3 class="title">Application method</h3>
-        <p>{{item.method}}</p>
-        <h3 class="title">Status</h3>
-        <p>{{item.status}}</p>
-        <button mat-raised-button color="primary" (click)="editApplication(item._id)">Edit</button>
-        <button mat-raised-button color="primary" (click)="newApplication(item._id)">New</button>
+<div>
+  <button mat-raised-button color="accent" id="add-button">Add New App</button>
+  <div cdkDropListGroup class = "wrapper">
+    <div class="container">
+  
+      <h2>Applications</h2>
+      <div
+        cdkDropList
+        [cdkDropListData]="applications"
+        class="example-list"
+        (cdkDropListDropped)="drop($event)">
+        <div class="example-box" *ngFor="let item of applications" cdkDrag>
+          <h3 class="title">Company name</h3>
+          <p>{{item.companyName}}</p>
+          <h3 class="title">Date applied</h3>
+          <p>{{item.date.toLocaleDateString("en-US")}}</p>
+          <h3 class="title">Position</h3>
+          <p>{{item.position}}</p>
+          <h3 class="title">Application method</h3>
+          <p>{{item.method}}</p>
+          <h3 class="title">Status</h3>
+          <p>{{item.status}}</p>
+          <button mat-raised-button color="primary" (click)="editApplication(item)">Edit</button>
+          <button mat-raised-button color="primary" (click)="newApplication('1')">New</button>
+        </div>
       </div>
     </div>
-  </div>
-
-   <div class="container">
-    <h2>In Progress</h2>
-    <div
-      cdkDropList
-      [cdkDropListData]="inProgress"
-      class="example-list"
-      (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of inProgress" cdkDrag>
-        <h3 class="title">Company name</h3>
-        <p>{{item.companyName}}</p>
-        <h3 class="title">Interview date</h3>
-        <p>{{item.date.toLocaleDateString("en-US")}}</p>
-        <h3 class="title">Status</h3>
-        <p>{{item.status}}</p>
-        <h3 class="title">Interview type</h3>
-        <p>{{item.type}}</p>
-        <h3 class="title">Feedback</h3>
-        <p>{{item.feedback}}</p>
-        <button mat-raised-button color="primary" (click)="editApplication(item._id)">Edit</button>
-        <button mat-raised-button color="primary" (click)="newApplication(item._id)">New</button>
+  
+     <div class="container">
+      <h2>In Progress</h2>
+      <div
+        cdkDropList
+        [cdkDropListData]="inProgress"
+        class="example-list"
+        (cdkDropListDropped)="drop($event)">
+        <div class="example-box" *ngFor="let item of inProgress" cdkDrag>
+          <h3 class="title">Company name</h3>
+          <p>{{item.companyName}}</p>
+          <h3 class="title">Interview date</h3>
+          <p>{{item.date.toLocaleDateString("en-US")}}</p>
+          <h3 class="title">Status</h3>
+          <p>{{item.status}}</p>
+          <button mat-raised-button color="primary" (click)="editApplication(item)">Edit</button>
+          <button mat-raised-button color="primary" (click)="newApplication('1')">New</button>
+        </div>
       </div>
     </div>
-  </div>
-
-  <div class="container">
-    <h2>Offers</h2>
-    <div
-      cdkDropList
-      [cdkDropListData]="offers"
-      class="example-list"
-      (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of offers" cdkDrag>
-        <h3 class="title">Company name</h3>
-        <p>{{item.companyName}}</p>
-        <h3 class="title">Employment type</h3>
-        <p>{{item.employmentType}}</p>
-        <h3 class="title">Annual salary</h3>
-        <p>${{(item.salary).toLocaleString()}}</p>
-        <h3 class="title">Benefits</h3>
-        <p>{{item.benefits}}</p>
-        <button mat-raised-button color="primary" (click)="editApplication(item._id)">Edit</button>
-        <button mat-raised-button color="primary" (click)="newApplication(item._id)">New</button>
+  
+    <!-- <div class="container">
+      <h2>Offers</h2>
+      <div
+        cdkDropList
+        [cdkDropListData]="offers"
+        class="example-list"
+        (cdkDropListDropped)="drop($event)">
+        <div class="example-box" *ngFor="let item of offers" cdkDrag>
+          <h3 class="title">Employment type</h3>
+          <p>{{ item.employmentType }}</p>
+          <h3 class="title">Annual salary</h3>
+          <p>${{ item.salary }}</p>
+        </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
