--- a/jobpath-app/src/app/components/edit-application-dialog/edit-application-dialog.component.css
+++ b/jobpath-app/src/app/components/edit-application-dialog/edit-application-dialog.component.css
@@ -1,15 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap");
 
 #container {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   max-width: 15em;
 }
 
 mat-label {
   color: #587cff;
+}
+
+.cdk-overlay-container {
+  z-index: 1200 !important;
+}
+
+.cdk-overlay-pane {
+  position: absolute;
+  pointer-events: auto;
+  box-sizing: border-box;
+  z-index: 1000;
+  display: flex;
+  max-width: 100%;
+  max-height: 100%;
 }
